first project added

--- a/project4/index.html
+++ b/project4/index.html
@@ -8,25 +8,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div><img src="./images/img1.jpg" alt="bgimg"></div>
-    <nav>
-        <div>
-            <img src="./images/img2.jpg" alt="logo" height="50px" width="50px">
-        </div>
-        <ul>
-            <li><a href=""></a>Our Menu</li>
-            <li><a href=""></a>Maps</li>
-            <li><a href=""></a>about</li>
-            <li><a href=""></a>contact</li>
-        </ul>
-        <div><button>order</button></div>
+    <div class="wallpaper"></div>
+    <div class="content">
+    <nav class="header">
+            <img  class="logo" src="./images/img2.jpg" alt="logo" height="50px" width="50px">
+            <ul>
+                <li><a href="#">Our Menu</a></li>
+                <li><a href="#">Maps</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        <div class="battan"><button class="buttonheader">order</button></div>
     </nav>
-    <section>
-        <div>
-            <p>A restrurant that serves only delicious Food</p>
+    <section class="text">
+        <div class="maintext">
+            <p>A restrurant that<br><p1>serves only</p1><br> delicious Food</p>
         </div>
-        <div><button>Read our Menu</button></div>
+        <div class="belowbuttoncontainer"><button class="belowbutton">Read our Menu</button></div>
     </section>
+    </div>
 </body>
 </html>
